--- a/Tournament.Api/Tournament.Api.csproj
+++ b/Tournament.Api/Tournament.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
       <PrivateAssets>all</PrivateAssets>
@@ -14,11 +15,16 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Tournament.Core\Tournament.Core.csproj" />
     <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
+	      <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
+	  <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
+
+    <ProjectReference Include="..\Tournament.Shared\Tournament.Shared.csproj" />
   </ItemGroup>
 
 </Project>
