--- a/Tournament.Data/Tournament.Data.csproj
+++ b/Tournament.Data/Tournament.Data.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
 
   </ItemGroup>
 
