--- a/Tournament.Api/Tournament.Api.csproj
+++ b/Tournament.Api/Tournament.Api.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain.Models\Domain.Models.csproj" />
     <ProjectReference Include="..\Tournament.Core\Tournament.Core.csproj" />
     <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
 	      <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
