--- a/Tournament.Api/Tournament.Api.csproj
+++ b/Tournament.Api/Tournament.Api.csproj
@@ -19,13 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain.Models\Domain.Models.csproj" />
-    <ProjectReference Include="..\Tournament.Core\Tournament.Core.csproj" />
     <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
 	      <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
 	  <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
-
-    <ProjectReference Include="..\Tournament.Shared\Tournament.Shared.csproj" />
+	  <ProjectReference Include="..\Tournament.Presentation\Tournament.Presentation.csproj" />
+	  <ProjectReference Include="..\Tournament.Services\Tournament.Services.csproj" />
   </ItemGroup>
 
 </Project>
