--- a/Tournament.Api/Tournament.Api.csproj
+++ b/Tournament.Api/Tournament.Api.csproj
@@ -19,6 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Services.Constracts\Services.Constracts.csproj" />
+    <ProjectReference Include="..\Tournament.Core\Tournament.Core.csproj" />
     <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
 	      <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
 	  <ProjectReference Include="..\Tournament.Data\Tournament.Data.csproj" />
